force-app/main/default/objects/ARTL_Bulk_Upload_Config__mdt/ARTL_Bulk_Upload_Config__mdt.object-meta.xml
<CustomObject>
    <label>ARTL Bulk Upload Config</label>
    <pluralLabel>ARTL_Bulk_Upload_Config</pluralLabel>
</CustomObject>