force-app/main/default/objects/ARTL_Bulk_Upload_Config__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>