force-app/main/default/objects/ARTL_Bulk_Upload_Config__mdt/fields/File_Header_CSV__c.field-meta.xml
<CustomField>
    <fullName>File_Header_CSV__c</fullName>
    <label>File Header CSV</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>