force-app/main/default/objects/ARTL_Bulk_Upload_Config__mdt/fields/Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>Object_Fields__c</fullName>
    <label>Object Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>