force-app/main/default/objects/ARTL_Bulk_Upload_Config__mdt/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Report</label>
    <type>Url</type>
</CustomField>